@@ -1,3 +1,9 @@
+Sun Dec 21 2003 Lachlan Andrew <lha@users.sourceforge.net>
+
+    * htsearch/HtURLSeedScore.cc, htsearch/SplitMatches.cc:  Fix bug #863860
+      Split patterns at "|".
+      For SplitMatches, make "*" only match if all other patterns fail.
+
 Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>
 
     * htdig/Server.cc:  Fix bug #851303.
